--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,24 +4,7 @@
     </h1>
     <ul>
         <li *ngFor="let busServiceList of busServiceStatus">
-            <table id="bus-details">
-                <thead>
-                    <tr>
-                        <th>Bus ID</th>
-                        <th>Route Variant</th>
-                        <th>Status</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let busDetails of busServiceList.busData">
-                        <td>{{busDetails.busId}}</td>
-                        <td>{{busDetails.routeVariant}}</td>
-                        <td>{{busDetails.deviationFromTimetable}}</td>
-                    </tr>
-                </tbody>
-            </table>
-            <textarea placeholder=" Enter notes here"></textarea>
-            <button>Save Notes</button>
+            <app-bus-service-list [busServiceList]="busServiceList"></app-bus-service-list>
         </li>
     </ul>
 </div>
