--- a/src/app/components/bus-service-list/bus-service-list.component.html
+++ b/src/app/components/bus-service-list/bus-service-list.component.html
@@ -1,6 +1,6 @@
 <div>
     <h2>{{busServiceList.organisation +' '}}-{{' '+busServiceList.date}}</h2>
-    <table id="bus-details">
+    <table class="table">
         <thead>
             <tr>
                 <th>Bus ID</th>
@@ -21,6 +21,8 @@
             </tr>
         </tbody>
     </table>
-    <textarea placeholder=" Enter notes here"></textarea>
-    <button>Save Notes</button>
+    <br>
+    <textarea class="form-control" rows="5" placeholder=" Enter notes here"></textarea>
+    <br>
+    <button type="button" class=" save btn btn-info">Save Notes</button>
 </div>
