--- a/src/app/components/bus-service-list/bus-service-list.component.html
+++ b/src/app/components/bus-service-list/bus-service-list.component.html
@@ -1,28 +1,33 @@
 <div>
-    <h2>{{busServiceList.organisation +' '}}-{{' '+busServiceList.date}}</h2>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Bus ID</th>
-                <th>Route Variant</th>
-                <th>Status</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let busDetails of busServiceList.busData">
-                <td>{{busDetails.busId}}</td>
-                <td>
-                    <span *ngIf="!(busDetails.routeVariant === 'UNKNOWN'); else unknown">
+    <h3 (click)="isExpanded = !isExpanded"><span>{{busServiceList.organisation +' '}}-{{' '+busServiceList.date}}</span>
+    <a [ngClass]="!isExpanded?'glyphicon  glyphicon-collapse-down':'glyphicon  glyphicon-collapse-up'">
+    </a>
+    </h3>
+    <div *ngIf="isExpanded">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Bus ID</th>
+                    <th>Route Variant</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let busDetails of busServiceList.busData">
+                    <td>{{busDetails.busId}}</td>
+                    <td>
+                        <span *ngIf="!(busDetails.routeVariant === 'UNKNOWN'); else unknown">
                                 <b>{{busDetails.routeVariant.slice( 0, 3 )}}</b> {{busDetails.routeVariant.slice( 4, 7 )}}
                             </span>
-                    <ng-template #unknown>Not Available</ng-template>
-                </td>
-                <td><span [innerHTML]="busDetails.deviationFromTimetable | arrivalStatus"></span></td>
-            </tr>
-        </tbody>
-    </table>
-    <br>
-    <textarea class="form-control" rows="5" placeholder=" Enter notes here"></textarea>
-    <br>
-    <button type="button" class=" save btn btn-info">Save Notes</button>
+                        <ng-template #unknown>Not Available</ng-template>
+                    </td>
+                    <td><span [innerHTML]="busDetails.deviationFromTimetable | arrivalStatus"></span></td>
+                </tr>
+            </tbody>
+        </table>
+        <br>
+        <textarea class="form-control" rows="5" placeholder=" Enter notes here"></textarea>
+        <br>
+        <button type="button" class=" save btn btn-info">Save Notes</button>
+    </div>
 </div>
