--- a/src/app/components/bus-service-list/bus-service-list.component.scss
+++ b/src/app/components/bus-service-list/bus-service-list.component.scss
@@ -1,9 +1,3 @@
-
-h2 {
-  font-family: sans-serif;
-  font-weight: normal;
-}
-
 th {
      background-color: #cce6ff;
 }
@@ -11,3 +5,9 @@ button.save{
     background-color: #809fff;
     border: none;
 }
+.glyphicon{
+  color: black;
+  float: right;
+  text-decoration: none;
+}
+
